deploy/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-node-manager
  namespace: default
  labels:
    app: kube-node-manager
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: kube-node-manager
---
apiVersion: v1
kind: Service
metadata:
  name: kube-node-manager-headless
  namespace: default
  labels:
    app: kube-node-manager
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: kube-node-manager
