deploy/k8s/kube-node-mgr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-node-mgr
  namespace: kube-node-mgr
  labels:
    app: kube-node-mgr
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: kube-node-mgr
---
apiVersion: v1
kind: Service
metadata:
  name: kube-node-mgr-headless
  namespace: kube-node-mgr
  labels:
    app: kube-node-mgr
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: kube-node-mgr
